# SMUQ-Valencia2024-talk

./: .gitignore  README.md
python-code/: visualizationVSM.wpr
python-code/data/: df_lower_q.csv  df_median.csv  df_solution.csv  df_upper_q.csv
python-code/visualization/: main.py  vsm_figures.py
pyvisvsm/: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
pyvisvsm/docs/: Makefile  conf.py  example.ipynb  make.bat
pyvisvsm/src/pyvisvsm/: __init__.py  main.py  pyvisvsm.py  vsm_animation.py  vsm_figures.py
pyvisvsm/tests/: test_pyvisvsm.py
