[tool.poetry]
name = "pyvisvsm"
version = "0.1.0"
description = "A collection of classes to visualize the Vaccinet Stock Management project"
authors = ["Saul Diaz Infante"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
