[tool.poetry]
name = "pyvisvsm"
version = "0.1.0"
description = "A collection of classes to visualize the Vaccinet Stock Management project"
authors = ["Saul Diaz Infante"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"
pandas = "^2.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
